# trajectory_generator

./: .clang-format  CMakeLists.txt  README.md
data/: maze_dist_map.txt  optimized_path.txt  pose.txt  samples.txt  trajectory.txt
include/: Math.h  angle_manifold.h  costmap_lite.h  initial_guess.h  kinematic_cost_function.h  motion_model.h  normalize_angle.h  obstacle_cost_functor.h  optimization_solver.h  struct.h  trajectory_generator.h  utils.h
src/: ceres_optimization.cpp  costmap_lite.cpp  debug_gradient.cpp  initial_guess.cpp  main.cpp  motion_model.cpp  trajectory_generator.cpp
